- Uploaded all existing source code

--- a/Source code/Platform.AddInSideAdapters/Platform.AddInSideAdapters.csproj
+++ b/Source code/Platform.AddInSideAdapters/Platform.AddInSideAdapters.csproj
@@ -133,7 +133,6 @@
     <CodeContractsAnalysisWarningLevel>2</CodeContractsAnalysisWarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="mscorlib" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.AddIn" />
@@ -162,6 +161,7 @@
     <ProjectReference Include="..\Platform.Contracts.Helpers\Platform.Contracts.Helpers.csproj">
       <Project>{A2747CFE-667E-4649-8B90-45E09D137B30}</Project>
       <Name>Platform.Contracts.Helpers</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\Platform.Contracts\Platform.Contracts.csproj">
       <Project>{B3704C14-249B-4751-A4E2-1A5C6652FA7C}</Project>
@@ -171,6 +171,7 @@
     <ProjectReference Include="..\Theme\Theme.csproj">
       <Project>{5A65DA67-130D-43D8-9224-4559B523B6D4}</Project>
       <Name>Theme</Name>
+      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
