--- a/Source code/Theme/Theme.csproj
+++ b/Source code/Theme/Theme.csproj
@@ -167,6 +167,10 @@
     <CodeContractsAnalysisWarningLevel>2</CodeContractsAnalysisWarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="JetBrains.Annotations">
+      <HintPath>..\..\Tools and Resources\Assembly dependencies\JetBrains.Annotations.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="Microsoft.Expression.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\Tools and Resources\Assembly dependencies\Microsoft.Expression.Drawing.dll</HintPath>
       <Private>False</Private>
@@ -180,6 +184,7 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Core" />
     <Reference Include="System.Windows.Interactivity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\Tools and Resources\Assembly dependencies\System.Windows.Interactivity.dll</HintPath>
       <Private>False</Private>
@@ -382,7 +387,6 @@
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="ReSharper\JetBrains.Annotations.cs" />
     <Compile Include="ThemeManager.cs" />
     <Compile Include="ThemeType.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
