- Fixed drop shadow in Window, ContextMenu, ComboBox and DropDownButton styles - Fixed fonts and ClearType issues in styles - Fixed TabControl and TabItem styles - Fixed DropDownCommandButton submenu location problem (bug #956) - Fixed DropDownCommandButton mouse capture problem (bug #958) - Fixed Theme.Test slow loading (bug #957)

--- a/Source code/Theme/Theme.csproj
+++ b/Source code/Theme/Theme.csproj
@@ -356,6 +356,7 @@
   <ItemGroup>
     <Compile Include="AccentColors.cs" />
     <Compile Include="Controls\CommandButtons\Automation\CommandButtonBaseAutomationPeer.cs" />
+    <Compile Include="Converters\IsGreaterThanConverter.cs" />
     <Compile Include="Extensions\ContractExtensions.cs" />
     <Compile Include="Extensions\ValidationHelper.cs" />
     <Compile Include="Controls\ApplicationBar\ApplicationBar.cs" />
