--- a/Source code/Test/Test.csproj
+++ b/Source code/Test/Test.csproj
@@ -34,6 +34,7 @@
     <DebugType>none</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\..\Binary\Release\Elysium for .NET 4\AnyCPU\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Analysis|AnyCPU'">
     <PlatformTarget>AnyCPU</PlatformTarget>
